{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "318c6d03-c469-4f9e-b94c-a64dc6649bbc",
            "actions": [
                {
                    "name": "HorizontalMovement",
                    "type": "Value",
                    "id": "493bbd55-bd74-4a18-ba3a-f0ca9dba1939",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "ad58ac5c-d168-48df-a0b5-560c86e11334",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ScreenPosition",
                    "type": "Value",
                    "id": "69788761-c040-4bb2-ba16-39f5bc4d78a9",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "Keyboard",
                    "id": "ed530089-a357-459d-969f-426262441e4c",
                    "path": "1DAxis",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "e8bc0d39-8992-425e-a191-61e3b2cbdd2a",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "59b8554b-c30d-4fca-9238-f39ce24e7fa5",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "3c713cc2-b084-47f0-9f09-5715de23958a",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "14bb2323-4316-4eb8-92e4-947ce22b6953",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ScreenPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}